--- a/src/general/MainMenu/MainMenu.css
+++ b/src/general/MainMenu/MainMenu.css
@@ -25,5 +25,5 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 999999;
+  z-index: 1000;
 }
